--- a/conf/application.conf
+++ b/conf/application.conf
@@ -343,3 +343,22 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+# Root logger:
+logger.root=ERROR
+
+# Logger used by the framework:
+logger.play=INFO
+
+# Logger provided to your application:
+logger.application=DEBUG
+
+# Logger for a third party library
+logger.org.springframework=INFO
+
+dates = {
+  from = "2000-01-01"
+  to = "2016-03-11"
+}
+
+maxRequestsPerMin = 5
